--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -37,6 +37,7 @@ en:
     certificate:
       status:
         draft: "draft"
+        verify: "verify"
         current: "current"
         rejected: "rejected"
         archive: "archive"
