--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -3,7 +3,15 @@ ru:
     certificate:
       status:
         draft: "Черновик"
+        verify: "На проверке"
         current: "Действующий"
         rejected: "Отклонен"
         archive: "Архив"
         recalled: "Аннулирован"
+
+  draft: "Черновик"
+  verify: "На проверке"
+  current: "Действующий"
+  rejected: "Отклонен"
+  archive: "Архив"
+  recalled: "Аннулирован"
